adding users & childern

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,10 @@
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import '~admin-lte/dist/css/adminlte.min.css';
 @import '~jqvmap/dist/jqvmap.min.css';
+@import '~icheck-bootstrap/icheck-bootstrap.min.css';
+@import '~daterangepicker/daterangepicker.css';
+@import '~select2/dist/css/select2.css';
+@import '~vue-search-select/dist/VueSearchSelect.css';
 
 @import 'variables';
 // Bootstrap
